new service: update dummy
