# controller/dummy.go
@@ -101,3 +101,35 @@ func (c *Controller) GetDummy(ctx *gin.Context) {
 
 	ctx.JSON(200, dummy)
 }
+
+// UpdateDummy godoc
+//
+//	@Summary		Updates Dummy
+//	@Description	Updates a dummy in database (id req)
+//	@Tags			dummy
+//	@Accept			json
+//	@Produce		json
+//	@Success		200	{object}	model.Dummy
+//	@Failure		400	{object}	httputil.HTTPError
+//	@Failure		404	{object}	httputil.HTTPError
+//	@Failure		500	{object}	httputil.HTTPError
+//	@Router			/dummy/update [put]
+func (c *Controller) UpdateDummy(ctx *gin.Context) {
+	var dummy model.Dummy
+	if err := ctx.BindJSON(&dummy); err != nil {
+		httputil.NewError(ctx, http.StatusBadRequest, err)
+		return
+	}
+
+	if err := dummy.QUpdateDummy(database.DB); err != nil {
+		switch err {
+		case gorm.ErrRecordNotFound:
+			httputil.NewError(ctx, http.StatusNotFound, err)
+		default:
+			httputil.NewError(ctx, http.StatusInternalServerError, err)
+		}
+		return
+	}
+
+	ctx.JSON(200, dummy)
+}
