# docs/swagger.json
@@ -18,58 +18,6 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
-        "/admin/auth": {
-            "post": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "get admin info",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "admin"
-                ],
-                "summary": "Auth admin",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/model.Admin"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/httputil.HTTPError"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/httputil.HTTPError"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/httputil.HTTPError"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/httputil.HTTPError"
-                        }
-                    }
-                }
-            }
-        },
         "/dummy/dummies": {
             "get": {
                 "description": "Select all Dummies",
@@ -143,6 +91,47 @@
                 }
             }
         },
+        "/dummy/update": {
+            "put": {
+                "description": "Updates a dummy in database (id req)",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "dummy"
+                ],
+                "summary": "Updates Dummy",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Dummy"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.HTTPError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
         "/dummy/{id}": {
             "get": {
                 "description": "Get one Dummy from ID",
@@ -193,22 +182,9 @@
                     "type": "integer",
                     "example": 400
                 },
-                "message": {
+                "error": {
                     "type": "string",
-                    "example": "status bad request"
-                }
-            }
-        },
-        "model.Admin": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "integer",
-                    "example": 1
-                },
-                "name": {
-                    "type": "string",
-                    "example": "admin name"
+                    "example": "Invalid request payload"
                 }
             }
         },
@@ -216,6 +192,7 @@
             "type": "object",
             "properties": {
                 "id": {
+                    "description": "gorm.Model",
                     "type": "integer",
                     "example": 1
                 },
